# monads-tf

./: .git-blame-ignore-revs  cabal.project  flake.nix  readme.md
.github/workflows/: ci.yml
demo/: demo.cabal
demo/except-1/: Main.hs
demo/except-2/: Main.hs
monads-tf/: changelog.md  monads-tf.cabal  readme.md
monads-tf/Control/Monad/: Accum.hs  Cont.hs  Error.hs  Except.hs  Identity.hs  List.hs  RWS.hs  Reader.hs  Select.hs  State.hs  Trans.hs  Writer.hs
monads-tf/Control/Monad/Cont/: Class.hs
monads-tf/Control/Monad/Error/: Class.hs
monads-tf/Control/Monad/Except/: Class.hs
monads-tf/Control/Monad/RWS/: CPS.hs  Class.hs  Lazy.hs  Strict.hs
monads-tf/Control/Monad/Reader/: Class.hs
monads-tf/Control/Monad/State/: Class.hs  Lazy.hs  Strict.hs
monads-tf/Control/Monad/Writer/: CPS.hs  Class.hs  Lazy.hs  Strict.hs
nix/: default.nix
