cabal-version: 3.0

name:         monads-tf
version:      0.1.0.3
license:      BSD-3-Clause
license-file: LICENSE
author:       Andy Gill
maintainer:   Ross Paterson <ross@soi.city.ac.uk>
category:     Control
synopsis:     Monad classes, using type families
description:
    Monad classes using type families, with instances for
    various monad transformers.

extra-source-files: *.md

library
  exposed-modules:
    Control.Monad.Cont
    Control.Monad.Cont.Class
    Control.Monad.Error
    Control.Monad.Error.Class
    Control.Monad.Identity
    Control.Monad.List
    Control.Monad.RWS
    Control.Monad.RWS.Class
    Control.Monad.RWS.Lazy
    Control.Monad.RWS.Strict
    Control.Monad.Reader
    Control.Monad.Reader.Class
    Control.Monad.State
    Control.Monad.State.Class
    Control.Monad.State.Lazy
    Control.Monad.State.Strict
    Control.Monad.Trans
    Control.Monad.Writer
    Control.Monad.Writer.Class
    Control.Monad.Writer.Lazy
    Control.Monad.Writer.Strict
  build-depends:
    , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
    , transformers ^>= 0.5.6
  default-extensions:
    TypeFamilies
  default-language: GHC2021
  ghc-options: -Wall
  hs-source-dirs: .
